fix mobile device layout

--- a/src/kpa500-remote/content/files.html
+++ b/src/kpa500-remote/content/files.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<!-- Copyright 2022, 2024, 2025 J. B. Otterson N1KDO. -->
+<!-- Copyright 2022, 2024, 2025, 2026 J. B. Otterson N1KDO. -->
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=0.8, minimum-scale=0.5, maximum-scale=2.0">
     <title>Files</title>
     <style>
         .author {
@@ -293,6 +294,6 @@
     <a href="setup.html">Setup</a>
     <span class="selected">Files</span>
 </div>
-<div class="author"><a href="https://www.n1kdo.com" target="_blank">N1KDO</a> 20251228</div>
+<div class="author"><a href="https://www.n1kdo.com" target="_blank">N1KDO</a> 20260107</div>
 </body>
 </html>
