--- a/src/kpa500-remote/content/kat500.html
+++ b/src/kpa500-remote/content/kat500.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<!-- Copyright 2023, 2025, J. B. Otterson N1KDO. -->
+<!-- Copyright 2023, 2025, 2026, J. B. Otterson N1KDO. -->
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=0.8, minimum-scale=0.5, maximum-scale=2.0">
     <title>KAT500 Web Remote</title>
     <style>
         body {
@@ -568,7 +569,7 @@
         <a href="setup.html">Setup</a>
         <a href="files.html">Files</a>
     </div>
-    <div class="author"><a href="https://www.n1kdo.com" target="_blank">N1KDO</a> 20251228</div>
+    <div class="author"><a href="https://www.n1kdo.com" target="_blank">N1KDO</a> 20260107</div>
 </div>
 </body>
 </html>
