--- a/src/kpa500-remote/content/setup.html
+++ b/src/kpa500-remote/content/setup.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<!-- Copyright 2024, 2025 J. B. Otterson N1KDO. -->
+<!-- Copyright 2024, 2025, 2026 J. B. Otterson N1KDO. -->
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=0.8, minimum-scale=0.5, maximum-scale=2.0">
     <title>Setup</title>
-
     <style>
         .author {
             font-size: 8pt;
